# revision_project

./: .gitignore  README.md  biology textbook.txt  enriched_data.csv  f_key.pem  makefile  modelling_mistral_new.py  pyproject.toml  ready_data.csv  requirements.txt  write up.txt
code/: THE_ONE.py  ask.ipynb  ask.py  augment.py  enrich_only.ipynb  enriched_miltiQ_chatml.ipynb  evaluation.py  extra.csv  first_100.csv  from_100.csv  from_104.csv  from_221.csv  from_269.csv  from_308.csv  making_added_eos.ipynb  making_comparison_models.ipynb  no_multi_q.py  one.py  one_manual_tokenizer.py  one_two.py  only_enriched.py  pushing.py  retrieve.py  test.py  ufeuheuf.csv
code/old tensor graphs/: output_REMn_prompt.txt  output_badprompt.txt  output_fixed_prompt.txt
code/stage_three/: lets_see.csv  stage_three_eval.py  stage_three_finetune.py  test.py
front_end/: app_class.py  main.py
pickle_frontend/: app_class.py  main.py  pickled_variables.pkl
revamp/: ISA Mock Schema.xlsx  Untitled4.ipynb  batch4_outputs.json  distill.py  eval.py  finetune_ffs.json  firstpage_classhead.py  firstpage_classhead_eval_memorysaving.py  firstpage_eval.py  firstpage_finetune.py  firstpage_make_data.py  firstpage_testdata.json  firstpage_w_classhead.py  firstpage_w_classhead_eval.py  make_data.py  make_synthetic new.py  make_synthetic.py  merge_class_to_causal.csv  modelling_mistral_ammened.py  rank32_outputs.json  retrieve.py  selecting_input_length.py  synthetic_data_newest.csv  synthetic_data_newest.json  testing_fp.json  testingdata.py  testingfinetune.py  testtt.py  try_finetune.csv
(+131 files in other folders)
